fix for blurry background images on homepage

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -8,8 +8,8 @@
       &:after {
         content: "";
         display: block;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         position: absolute;
         top: 0;
         left: 0;
@@ -18,7 +18,6 @@
         background-image: url('/assets/img/home-canopy-mobile.jpg');
         background-size: cover;
         background-position: center center;
-        background-attachment: fixed;
       }
     }
 
@@ -249,6 +248,7 @@
         position: relative !important;
         max-width: 100vw;
         max-height: 100vh;
+        background-attachment: scroll;
       }
 
       .slider {
